--- a/style.css
+++ b/style.css
@@ -1,34 +1,29 @@
-.fontawesome {
-  font-size: 1.15rem;
-  color: #333333;
-}
-
 .tooltip {
-  position: relative;
-  display: inline-block;
-  cursor: pointer; /* makes it feel clickable */
+        position: relative;
+        display: inline-block;
 }
 
 .tooltip .tooltiptext {
-  visibility: hidden;
-  width: 200px;
-  background-color: #333333;
-  color: #f8f8f8;
-  font-size: 1.15rem;
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
-  border-radius: 6px;
-  padding: 15px;
-  position: absolute;
-  z-index: 1;
-  top: 100%;
-  left: 50%;
-  margin-left: -100px;
-  opacity: 0;
-  transition: opacity 0.3s ease-in-out;
+    visibility: hidden;
+    width: 200px;
+    background-color: #333333;
+    color: #f8f8f8;
+    font-size: 1.15rem;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    border-radius: 6px;
+    padding: 15px;
+
+    /* Position the tooltip text */
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 50%;
+    margin-left: -100px;
 }
 
 .tooltip:hover .tooltiptext {
-  visibility: visible;
-  opacity: 1;
+    visibility: visible;
 }
+
+      
